complete bannerhandler unit test
